<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.addnote.AddNoteFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:background="@drawable/ic_cancel"
        android:layout_height="40dp"
        android:layout_margin = "20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button" />

    <ImageView
        android:id="@+id/img_boss"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/bg_circle"
        android:contentDescription="@string/button" />

    <EditText
        android:id="@+id/title"
        android:hint="@string/title"
        android:autofillHints="text"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/img_boss"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:hint="@string/description"
        android:autofillHints="text"
        android:id="@+id/description"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:hint="@string/date"
        android:id="@+id/date_note"
        android:autofillHints="text"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/send"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/date_note"/>





</androidx.constraintlayout.widget.ConstraintLayout>