<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_note_for_kiro"
    android:padding="10dp">

    <ImageView
        android:id="@+id/image_note"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image"
        android:src = "@drawable/bg_circle"/>

    <TextView
        android:id="@+id/title_note"
        android:layout_width="wrap_content"
        android:text="@string/title"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image_note"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"/>


    <TextView
        android:id="@+id/desc_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/image_note"
        app:layout_constraintTop_toBottomOf="@id/title_note"
        />
    <TextView
        android:id="@+id/date_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_12_04_2023"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/image_note"
        app:layout_constraintTop_toBottomOf="@id/desc_note"
        />

    <CheckBox
        android:id="@+id/checkBox_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/title_note"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>