<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:constraint_referenced_ids="board_img,board_tv_title,
        board_tv_desc,board_btn_start"
        tools:layout_editor_absoluteX="-132dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:src="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/board_img"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/board_tv_title"
        android:text="@string/hello_world"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/board_tv_desc"
        android:text="@string/i_am_android"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_go"
        android:id="@+id/board_btn_start"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/white"
        app:dotsCornerRadius="8dp"
        app:dotsSize="16dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:selectedDotColor="@color/purple_200"
        app:progressMode="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>